--- a/web/src/styles/pages/orphanagesMap.css
+++ b/web/src/styles/pages/orphanagesMap.css
@@ -71,3 +71,36 @@
 #pageMap .createOrphanage:hover {
   background: #17d6eb;
 }
+
+#pageMap .mapPopup .leaflet-popup-content-wrapper {
+  background: rgba(255, 255, 255, 0.8);
+  border-radius: 20px;
+  box-shadow: none;
+}
+
+#pageMap .mapPopup .leaflet-popup-content {
+  color: #0089a5;
+  font-size: 14px;
+  font-weight: bold;
+  margin: 8px 12px;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#pageMap .mapPopup .leaflet-popup-content a {
+  width: 40px;
+  height: 40px;
+  background: #15c4d6;
+  box-shadow: 17.2868px 27.6589px 41.4884px rgba(23, 142, 166, 0.16);
+  border-radius: 12px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#pageMap .mapPopup .leaflet-popup-tip-container {
+  display: none;
+}
