--- a/web/src/styles/pages/create-orphanage.css
+++ b/web/src/styles/pages/create-orphanage.css
@@ -19,6 +19,12 @@ form.create-orphanage-form {
   overflow: hidden;
 }
 
+form.create-orphanage-form .leaflet-container {
+  margin-bottom: 40px;
+  border: 1px solid #d3e2e5;
+  border-radius: 20px;
+}
+
 form.create-orphanage-form fieldset {
   border: 0;
 }
@@ -81,13 +87,29 @@ form.create-orphanage-form .input-block textarea {
   line-height: 28px;
 }
 
+form.create-orphanage-form .input-block .images-container {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 15px;
+}
+
+form.create-orphanage-form .input-block input[type="file"] {
+  display: none;
+}
+
 form.create-orphanage-form .input-block .new-image {
   width: 100%;
-  height: 64px;
+  height: 96px;
   background: #f5f8fa;
   border: 1px dashed #96d2f0;
   border-radius: 20px;
   cursor: pointer;
+
+  object-fit: cover;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 form.create-orphanage-form .input-block .button-select {
