--- a/web/src/styles/pages/orphanage.css
+++ b/web/src/styles/pages/orphanage.css
@@ -145,6 +145,15 @@
   color: #37c77f;
 }
 
+.orphanage-details
+  .orphanage-details-content
+  .open-details
+  div.closed-on-weekends {
+  background: linear-gradient(154.16deg, #fdf0f5 7.85%, #ffffff 91.03%);
+  border: 1px solid #ffbcd4;
+  color: #ff6690;
+}
+
 .orphanage-details .orphanage-details-content button.contact-button {
   margin-top: 64px;
 
@@ -170,4 +179,8 @@
 
 .orphanage-details .orphanage-details-content button.contact-button:hover {
   background: #36cf82;
+}
+
+.closed-on-weekends {
+  background: #ff90ae;
 }
